--- a/.github/workflows/backend_benchmark.yml
+++ b/.github/workflows/backend_benchmark.yml
@@ -1,14 +1,7 @@
 name: Backend Benchmark
 
 on:
-  push:
-    branches:
-      - 'main'
-    tags:
-      - '[0-9]+.[0-9]+.[0-9]+*'
-      - 'v[0-9]+.[0-9]+.[0-9]+*'
-  pull_request:
-
+  workflow_call:
 env:
   LIBCLANG_PATH_WIN: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Tools/Llvm/x64/bin"
   CARGO_MAKE_VERSION: 0.35.13
