--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,11 @@ env:
 jobs:
   backend_bench:
     uses: swift-nav/swift-toolbox/.github/workflows/backend_benchmark.yml@main
+    secrets: inherit
+
   checks:
     uses: swift-nav/swift-toolbox/.github/workflows/code_quality.yml@main
+    secrets: inherit
 
   build:
     name: Build Binaries
