--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,13 +21,30 @@ env:
   APP_BUNDLE_ID: com.swift-nav.SwiftConsole
 
 jobs:
+
   backend_bench:
-    uses: swift-nav/swift-toolbox/.github/workflows/backend_benchmark.yml@main
-    secrets: inherit
+    name: Backend Benchmark
+    runs-on: ubuntu-latest
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v2
+      - name: Trigger workflow
+        run: |
+          gh workflow run backend_bench.yml
 
   checks:
-    uses: swift-nav/swift-toolbox/.github/workflows/code_quality.yml@main
-    secrets: inherit
+    name: Code Quality
+    runs-on: ubuntu-latest
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v2
+      - name: Trigger workflow
+        run: |
+          gh workflow run code_quality.yml
 
   build:
     name: Build Binaries
