remove out create release from main

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -397,6 +397,4 @@ jobs:
         continue-on-error: true
         run: cargo make disk-usage-bench
 
-  create_release:
-    name: Build and release
-
+# trigger create release workflow + frontend bench
