--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,11 @@ env:
 jobs:
 
   backend_bench:
-
     name: Backend Benchmarks
-
     strategy:
       matrix:
         os: [ ubuntu-20.04, macos-11, windows-2019 ]
-
     runs-on: ${{ matrix.os }}
-
     steps:
 
       - name: Checkout source
@@ -104,11 +100,8 @@ jobs:
         run: cargo make backend-benches
 
   checks:
-
     name: Code Quality Checks
-
     runs-on: ubuntu-20.04
-
     steps:
       - name: Checkout source
         uses: actions/checkout@v2
@@ -184,20 +177,15 @@ jobs:
           command: cargo make tests
 
   build:
-
     name: Build Binaries
-
-    needs: [ checks,backend_bench ]
-
+    needs: [ checks, backend_bench ]
     strategy:
       matrix:
         os:
           - { name: ubuntu-20.04, exe_suffix: "", short_name: "linux" }
           - { name: macos-11, exe_suffix: "", short_name: "macos" }
           - { name: windows-2019, exe_suffix: ".exe", short_name: "windows" }
-
     runs-on: ${{ matrix.os.name }}
-
     steps:
 
       - name: Checkout source
@@ -392,4 +380,15 @@ jobs:
         continue-on-error: true
         run: cargo make disk-usage-bench
 
-# trigger create release workflow + frontend bench
+  frontend_distribute:
+    name: Run frontend benchmarks, sign and distribute
+    needs: build
+    runs-on: ubuntu-latest
+    run: |
+      const ret = await github.rest.createWorkflowDispatch({
+        owner: 'swift-nav',
+        repo: 'toolbox-backend-ci',
+        workflow_id: 'distribute.yml',
+        ref: 'main',
+      });
+      console.log(ret);
