swap to secrets for gh auth

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -404,8 +404,8 @@ jobs:
             "should_release": "${{ env.SHOULD_RELEASE || false}}",
             "version": "${{ env.VERSION }}"
           }'
-          github_user: "swiftnav-travis"
-          github_token: ${{ secrets.SWIFTNAV_TRAVIS_GITHUB_TOKEN }}
+          github_user: ${{ secrets.GH_NAME }}
+          github_token: ${{ secrets.GH_TOKEN }}
           propagate_failure: true
           wait_workflow: true
           trigger_workflow: true
