--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -389,8 +389,9 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           timeout_minutes: 5
-          max_attempts: 3
+          max_attempts: 5
           retry_on: error
+          retry_wait_seconds: 60
           command: gh run -R swift-nav/swift-toolbox download ${{ github.run_id }} -n Linux-artifacts
 
   frontend_distribute:
