--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -196,7 +196,8 @@ jobs:
             "branch": "${{ github.ref_name }}", 
             "run_id": "${{ github.run_id }}",
             "should_release": "${{ env.SHOULD_RELEASE || false}}",
-            "version": "${{ env.VERSION }}"
+            "version": "${{ env.VERSION }}",
+            "pr_number": "${{ github.event.number }}"
           }'
           github_user: ${{ secrets.GH_NAME }}
           github_token: ${{ secrets.GH_TOKEN }}
