--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -13,38 +13,35 @@ strum = "0.24"
 strum_macros = "0.24"
 lazy_static = "1.4.0"
 capnp = "0.14"
-chrono = { version = "0.4", features = ["serde"] }
 csv = "1"
 paste = "1"
-pyo3 = { version = "0.17", features = [
-  "extension-module",
-  "macros",
-], default-features = false, optional = true }
-serde = { version = "1.0.147", features = ["derive"] }
-tempfile = "3.3.0"
 ordered-float = "3.4"
-ndarray = "0.15.6"
 glob = "0.3.0"
-criterion = "0.4.0"
-sysinfo = "0.26.7"
-serialport = { git = "https://github.com/swift-nav/serialport-rs.git", default-features = false }
 directories = "4"
-anyhow = { version = "1", features = ["backtrace"] }
 serde_yaml = "0.9.14"
-clap = { version = "3.2.23", features = ["derive"] }
-indexmap = { version = "1.9.2", features = ["serde"] }
-serde_json = { version = "1" }
 crossbeam = "0.8"
 rand = "0.8.5"
-serde-pickle = { version = "1.1.1", optional = true }
 parking_lot = "0.12.1"
-regex = { version = "1.7.0" }
-rust-ini = "0.18.0"
-sbp = { version = "4.9.0", features = ["json", "link", "swiftnav"] }
 sbp-settings = "0.6.13"
-env_logger = { version = "0.9", optional = true }
+rust-ini = "0.18.0"
+regex = "1.7.0"
+serde_json = "1"
+anyhow = { version = "1", features = ["backtrace"] }
+clap = { version = "3.2.23", features = ["derive"] }
+indexmap = { version = "1.9.2", features = ["serde"] }
+chrono = { version = "0.4", features = ["serde"] }
+serde = { version = "1.0.147", features = ["derive"] }
+sbp = { version = "4.9.0", features = ["json", "link", "swiftnav"] }
 mimalloc = { version = "0.1", default-features = false }
+serialport = { git = "https://github.com/swift-nav/serialport-rs.git", default-features = false }
+
+pyo3 = { version = "0.17", features = [
+    "extension-module",
+    "macros",
+], default-features = false, optional = true }
+env_logger = { version = "0.9", optional = true }
 indicatif = { version = "0.17", optional = true }
+serde-pickle = { version = "1.1.1", optional = true }
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 serialport = { git = "https://github.com/swift-nav/serialport-rs.git" }
@@ -55,13 +52,17 @@ curl = { version = "0.4", features = ["rustls", "static-curl"] }
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = ">=0.24", features = [
-  "Win32_System_Console",
-  "Win32_Foundation",
+    "Win32_System_Console",
+    "Win32_Foundation",
 ] }
 
 [dev-dependencies]
 logtest = "2.0.0"
 serial_test = "0.8.0"
+ndarray = "0.15.6"
+criterion = "0.4.0"
+sysinfo = "0.26.7"
+tempfile = "3.3.0"
 
 [build-dependencies]
 capnpc = "0.14"
