--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -134,8 +134,9 @@ jobs:
         with:
           profile: minimal
           toolchain: stable
-          override: true
           components: rustfmt, clippy
+
+      - run: rustup update # hacky fix, updates rustfmt and clippy
 
       - uses: Swatinem/rust-cache@v1
         with:
