--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -198,3 +198,4 @@ jobs:
           propagate_failure: true
           wait_workflow: true
           trigger_workflow: true
+          wait_interval: 120
