--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ readme = "README.md"
 classifiers = []
 requires-python = ">=3.8"
 dynamic = ['version', 'description']
-dependencies = ["PySide6 == 6.3.2", "pycapnp == 1.2.2"]
+dependencies = ["PySide6 == 6.4.1", "pycapnp == 1.2.2"]
 
 [project.optional-dependencies]
 test = [
@@ -35,3 +35,25 @@ include = ["swiftnav_console/console_resources.py"]
 
 [tool.black]
 line-length = 120
+
+[tool.pylint.MASTER]
+jobs = 0
+extension-pkg-whitelist = "PySide6"
+
+[tool.pylint.'MESSAGES CONTROL']
+disable = [
+  "missing-function-docstring",
+  "invalid-name",
+  "missing-module-docstring",
+  "missing-class-docstring",
+  "too-many-locals",
+  "too-many-statements",
+  "too-many-arguments",
+  "too-many-branches",
+  "too-many-function-args",
+  "ungrouped-imports",
+  "duplicate-code",
+]
+
+[tool.pylint.FORMAT]
+max-line-length = 120
